sample/misc/error/eval_unexpected-index.bfr
codegen [
  $build {
    a: array(3) { i: index }
  } in
  . a:i
]